--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .addingTask {
     display: flex;
-    justify-content: space-evenly; 
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -31,6 +31,10 @@ body {
     border-radius: 20px;
     padding: 5px 20px 5px 20px;
     outline: none;
+}
+
+.addToListButton:hover {
+    cursor: pointer;
 }
 
 .taskList {
